# RetinoTectal

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  valgrind.supp
analysis/: .gitignore  G0_vs_noise.py  GI_vs_noise.py  GJ_vs_noise.py  GJ_vs_retnoise.py  bs_manip_vs_wt.py  bs_manip_vs_wt2.py  plot_anneal_output.m  plot_cid.py  sd_manip_vs_wt.py
analysis/include/: RettecData.py  Surface.py
configs/: N12.json  N14.json  N156.json  N24.json  N28_half.json  N48.json  N56.json  N56_guidanceNoise.json  N56_half.json  N96.json  agent1.json  agent1_retablate.json  agent1_tecablate.json  agent1_tecrot90.json  agent1_tecswap.json  test.json
configs/a1/: .gitignore  e1.json  e_brown.json  e_brown2.json  e_compound.json  e_knockin1.json  e_knockout1.json  e_mismatch.json  e_reber.json  e_reber3.json  e_retablate.json  e_single.json  e_tecablate.json  e_tecnoswap.json  e_tecrot180.json  e_tecrot180_1br.json  e_tecrot90.json  e_tecrot90_1br.json  e_tecswap.json  e_wt.json  e_wt.movie.json  e_wt_chemoonly.json  e_wt_fig.json  e_wt_rotcmp.json  e_wt_rotcmp_1br.json  e_wt_single.json  e_wt_singlemovie.json  m1.json  m_e-lin.json  m_e-lin_chemoonly.json  m_eE_G.json  m_eE_GC.json  m_eE_GI.json  m_eE_GIJ.json  m_eE_GIJ__almost_gives_collapse.json  m_eE_GJ.json  m_eE_IJ.json  m_ee.json  m_ee_1br.json  m_ee_2d.json  (+33 more)
configs/koulakov/: dev.json
configs/simpler/: README.md  e_compound.json  e_compound_fig4D.json  e_eph_ki-kd.json  e_eph_ki-kd_lite.json  e_eph_ki-kd_noise.json  e_eph_ki-kdkd.json  e_eph_ki-wt.json  e_eph_kiki-kd.json  e_eph_kiki-kdkd.json  e_eph_kiki-wt.json  e_eph_wt-kd.json  e_eph_wt-wt.json  e_mismatch_fig4C.json  e_mismatch_fig4row4.json  e_mismatch_fig4row6.json  e_mismatch_figcomp.json  e_reber.json  e_retablat_fig4A.json  e_retablat_fig4row4.json  e_retablat_figcomp.json  e_single-caudal.json  e_single-centre.json  e_single-rostral.json  e_tecablat_fig4B.json  e_tecablat_fig4row5.json  e_tecablat_figcomp.json  e_tecrot180_fig3B.json  e_tecrot180_fig4row2.json  e_tecrot180_figcomp.json  e_tecrot90_fig4row1.json  e_tecrot90_figcomp.json  e_tecrot90_suppfig.json  e_tecswap_fig4row3.json  e_tecswap_figcomp.json  e_wt_fig2.json  e_wt_fig2_movie.json  e_wt_fig3.json  e_wt_figcomp1.json  e_wt_figcomp2.json  (+27 more)
log/: .gitignore  README.md
log/anneal1/: .gitignore  anneal1_ee_GC_20211024_213136.h5  anneal1_ee_GIJ_20211110_213359.h5  anneal1_ee_GI_20211103_220208.h5  anneal1_ee_GJ_20211024_195827.h5  anneal1_ee_GJ_20220301_141810.h5  anneal1_ee_GJ_20220301_141810_mconf.json  anneal1_ee_GJ_linretlig_20220301_172712.h5  anneal1_ee_GJ_linretlig_20220301_172712_mconf.json  anneal1_ee_GJ_linretlig_20220301_172712_sconf.json  ee_GC_best_1_results.txt  ee_GIJ_best_1_results.txt  ee_GI_best_1_results.txt  ee_GJ_best_1_results.txt  m_ee_GIJ_best_1.json  m_ee_GIJ_best_1_noI.json  m_ee_GIJ_best_1_noJ.json  m_ee_GI_best_1.json  m_ee_GI_best_1_stochastic.json  m_ee_GJ_best_1.json
misc/: I.m  J.m  J_EphManip.m  brown_fig5c_kiki-wt-bot.csv  brown_fig5c_kiki-wt-top.csv  brown_fig5c_kiki-wt.dig  de.m  epha.m  ephrin_glossary.txt  examineRetEph.m  examineRetEph.py  examineRetEph2.py  examineRetEph3.py  examineRetEph4.py  examineRetEph5.py  examineRetEph_complex.py  examineRetEph_simple.py  examineRetEph_simple2.py  exps_logs_used.m  gaussians.m  gebhardt_exps.m  movie.sh  quickie.m  quickperf.py  reber_box1.m  reber_fig3.csv  reber_fig3.dig  reber_fig3.py  reber_fig3_grey.csv  reber_fig3_grey1.csv  reber_fig3_red.csv  reber_fig3_red1.csv  reber_fig4d_ki-kdkd-bot.csv  reber_fig4d_ki-kdkd-top.csv  reber_fig4d_ki-kdkd.csv  reber_fig4d_ki-kdkd.dig  reber_fig4e_kiki-kd-bot.csv  reber_fig4e_kiki-kd-top.csv  reber_fig4e_kiki-kd.dig  reber_fig4f_kiki-kdkd-bot.csv  (+5 more)
misc/expression_profiling/: Braisted_EphnB1_Fig4B.json  Braisted_EphnB1_Fig4BJ.py  Braisted_EphnB1_Fig4J.json  Braisted_EphnB_Retina_Fig1CD.json  Braisted_EphnB_Retina_Fig1CD.py  Holash_Pasquale_Fig6_EphB2_and_EphA4.json  Holash_Pasquale_Fig6_EphB2_and_EphA4.py  Holash_Pasquale_Fig7_EphB2_and_EphA4_DV_e4.json  Holash_Pasquale_Fig7_EphB2_and_EphA4_DV_e4.py  Holash_Pasquale_Fig7_EphB2_and_EphA4_DV_e4_2.py  readme.txt  (+19 more)
optimization/: GJ.json  m_e3_GJ.json  m_ee_GC.json  m_ee_GI.json  m_ee_GJ.json  s_GC.json  s_GCI.json  s_GI.json  s_GJ.json  s_GJ_fixs.json  s_GJ_shigh.json  search_GC.sh  search_GI.sh  search_GJ.sh  search_GJ_fixs.sh  search_GJ_intermed_exp.sh  search_GJ_linretlig.sh
paper/: .gitignore  GI_vs_noise.py  GI_vs_noise.txt  RetinoTectal.bib  abstract.txt  gaussians.m  main.sh  main.tex  notes.tex  paper.sh  paper.tex  receptor_receptor_massaction.tex  squashgauss.m
rcnt/: .gitignore  README.md
scripts/: eph.sh  eph_c.sh  fig_G0_noise.sh  fig_G0_wildtype.sh  fig_GC_surgical.sh  fig_GClikeGJ_surgical.sh  fig_GI_noise.sh  fig_GI_surgical.sh  fig_GJ_noise.sh  fig_GJ_retnoise.sh  fig_GJ_surgical.sh  fig_G_surgical.sh  fig_G_wildtype.sh  fig_chemo.sh  fig_chemo_ablation.sh  fig_chemo_surgical1.sh  fig_expression.sh  fig_surgical.sh  fig_surgical2.sh  fig_surgical2_GJ.sh  fig_wt.sh  genetic_manipulations.sh  nocomp.json  paper_figures.sh  plotset.py  random.json  rerun_kikd.sh  runset.json  runset.py  runset.sh  search_GI.sh  search_GJ.sh
sim/: CMakeLists.txt  rd_ag_nocomp.h  rd_barrel.h  rd_james.h  rd_james_divnorm.h  rd_james_dncomp.h  rd_retnocomp.h  rd_rettec.h  rd_rettec_nocomp.h  retarrange.h  rettec.cpp
sim/agent/: CMakeLists.txt  README.md  agent1.cpp  agent1.h  agent1_eval.cpp  anneal1.cpp  anneal1read.cpp  branch.h  branch_base.h  branch_geb.h  branch_koulakov.h  branch_rng_float.h  branch_stochastic.h  branchvisual.h  koulakov1d.cpp  koulakov1d.h  koulakov1d_fig4.cpp  koulakov1d_fig5.cpp  koulakov1d_fig6.cpp  koulakov1d_figs_5_6.h  net.h  netvisual.h  retvisual.h  search1.cpp  search2.cpp  testnet.cpp  tissue.h  tissuevis.cpp  tissuevisual.h
sim/koulakov/: CMakeLists.txt  README.md  koulakov1d_fig5.cpp  koulakov1d_fig6.cpp  koulakov1d_figs_5_6.h  ktt.h  ktt.json  ktt1d_range.cpp  ktt1d_wt.cpp
sim/rd/: CMakeLists.txt  README.md  rd_ag_nocomp.h  rd_barrel.h  rd_rettec.h  rd_rettec_nocomp.h  retarrange.h  rettec.cpp
(+26 files in other folders)
